SERVER-76919 add gen command fields to queryStats key